<resources>
    <string name="app_name">UnitConvertor2.1</string>
    <string name="result">Result…</string>
    <string name="enter_parameter">Enter parameter</string>
    <string name="convert">CONVERT</string>
    <string name="temperature_unit_conversion">Temperature Unit Conversion</string>
    <string name="length">Length</string>
    <string name="weight">Weight</string>
    <string name="temperature">Temperature</string>
    <string name="unit_conversion">Unit Conversion</string>
    <string name="todo">TODO</string>
    <string name="by_prabhjot_singh">By Prabhjot Singh</string>
</resources>