<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_drawable"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/weightconversion"
        android:layout_width="106dp"
        android:layout_height="92dp"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="64dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/weight"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/weight"
        tools:ignore="DuplicateSpeakableTextCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/lengthconversion"
        android:layout_width="106dp"
        android:layout_height="93dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="204dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/length"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/length"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/tempconversion"
        android:layout_width="104dp"
        android:layout_height="92dp"
        android:layout_marginStart="153dp"
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="7dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/temperature"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/temp"
        tools:ignore="DuplicateSpeakableTextCheck,ImageContrastCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginBottom="412dp"
        android:text="@string/length"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lengthconversion" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="413dp"
        android:text="@string/weight"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightconversion" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="191dp"
        android:text="@string/temperature"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="119dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="120dp"
        android:gravity="center"
        android:text="@string/unit_conversion"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/by_prabhjot_singh"
        android:textColor="#7E000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="HardcodedText,TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>