<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_drawable"
    tools:context=".ConversionScreen">

    <EditText
        android:id="@+id/inputparameter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="167dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="67dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_parameter"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintEnd_toStartOf="@+id/sourcespinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result"
        android:layout_width="204dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="69dp"
        android:background="@android:drawable/edit_text"
        android:text="@string/result"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/destinationspinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputparameter" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="214dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/convert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/sourcespinner"
        android:layout_width="120dp"
        android:layout_height="42dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="170dp"
        android:layout_marginBottom="86dp"
        app:layout_constraintBottom_toTopOf="@+id/destinationspinner"
        app:layout_constraintStart_toEndOf="@+id/inputparameter"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    <Spinner
        android:id="@+id/destinationspinner"
        android:layout_width="120dp"
        android:layout_height="42dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="76dp"
        app:layout_constraintStart_toEndOf="@+id/result"
        app:layout_constraintTop_toBottomOf="@+id/sourcespinner"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/conversiontitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="174dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="179dp"
        android:text="@string/temperature_unit_conversion"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>